# tradepilot-ai

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.production.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: application.py  config.py  logging.py  main.py
backend/app/ai/: __init__.py  context_builder.py
backend/app/api/: auth.py  dependencies.py  errors.py  exception_handlers.py  health.py  security.py
backend/app/auth/: __init__.py  errors.py  passwords.py  service.py  sessions.py
backend/app/calculations/: __init__.py  decimal_utils.py  errors.py  exits.py  market.py  models.py  position.py
backend/app/cli/: __init__.py  create_user.py
backend/app/context/: __init__.py  builder.py  freshness.py  history_selector.py
backend/app/database/: session.py  types.py
backend/app/evidence/: __init__.py  validation.py
backend/app/jobs/: __init__.py  models.py  processor.py  queue.py
backend/app/lifecycle/: __init__.py  service.py  transitions.py
backend/app/models/: __init__.py  analysis.py  analysis_job.py  context_summary.py  enums.py  evidence.py  provider_request.py  provider_response.py  session_event.py  trade_action.py  trade_session.py  trade_state.py  user.py  validation_attempt.py
backend/app/repositories/: __init__.py  analysis.py  analysis_job.py  auth_session.py  context_summary.py  evidence.py  session_event.py  trade_action.py  trade_session.py  trade_state.py  user.py
backend/app/schema_validation/: validate_fixtures.py
backend/app/schemas/: __init__.py  errors.py  manifest.py  registry.py  resolver.py
backend/app/services/: __init__.py  analysis_jobs.py  context_rebuild.py  evidence.py  trade_session.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/validation/: __init__.py  closing.py  context_summary.py  entry_plan.py  issues.py  json_pointer.py  json_schema.py  market_snapshot.py  partial_exit.py  registry.py  risk_reward.py  service.py  state_consistency.py  stop_loss.py  target.py  timeline.py  trade_state.py
backend/migrations/: env.py
backend/migrations/versions/: 03f81601e437_empty_foundation.py  1025246d82f3_trade_states.py  3f0b2a4f1e24_worker_heartbeats.py  4a2b6c8d0e1f_user_sessions.py  5dac6cef5c21_users_trade_sessions.py  6730f9d6ee1d_trade_actions.py  8e4d747e19db_context_and_events.py  9d219c5a02e1_evidence.py  fc58b8bbeab7_analysis_models.py
backend/tests/: conftest.py  test_application.py  test_config.py  test_health.py  test_json_schema_validation.py  test_manifest_loader.py  test_schema_manifest.py  test_schema_registry.py  test_schemas.py
backend/tests/ai/: __init__.py  test_context_builder.py  test_deepseek_provider.py  test_gemini_provider.py  test_prompt_registry.py  test_provider_contract.py  test_provider_contract_suite.py  test_provider_fallback.py  test_provider_selection.py  test_repair_service.py
backend/tests/api/: test_analyses.py  test_context_timeline.py  test_evidence.py  test_trade_actions.py  test_trade_sessions.py
backend/tests/auth/: test_auth.py
backend/tests/calculations/: test_bbri_fixture.py  test_decimal_utils.py  test_exits.py  test_market.py  test_position.py
backend/tests/cli/: test_create_user.py  test_integration.py
backend/tests/context/: __init__.py  test_context_builder.py  test_context_freshness.py  test_history_selector.py
backend/tests/database/: test_analysis_models_migration.py  (+10 more)
worker/: .dockerignore  README.md  pyproject.toml
worker/app/: config.py  heartbeat.py  logging.py  main.py  runtime.py  startup_validation.py
worker/tests/: test_config.py  test_heartbeat.py  test_logging.py  test_main.py  test_runtime.py  test_startup_validation.py  test_worker_processing.py
(+303 files in other folders)
