[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradepilot-api"
version = "0.1.0"
description = "TradePilot AI backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "jsonschema>=4.23.0",
    "referencing>=0.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["index", "no-any-return", "no-untyped-def", "no-untyped-call", "misc", "type-arg", "call-arg", "attr-defined", "operator", "unused-ignore"]

[[tool.mypy.overrides]]
module = "app.schemas.manifest"
disable_error_code = ["attr-defined", "assignment", "arg-type", "var-annotated"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "database: tests that require a running PostgreSQL instance",
]
