[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradepilot-worker"
version = "0.1.0"
description = "TradePilot AI background worker"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["dict-item", "index", "no-any-return", "no-untyped-def", "no-untyped-call", "misc", "type-arg", "call-arg", "arg-type", "attr-defined", "operator", "return-value", "union-attr", "unused-ignore", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
